--- a/project-mini-6/package.json
+++ b/project-mini-6/package.json
@@ -12,7 +12,7 @@
     "react-redux": "^9.1.2",
     "react-router": "^6.26.0",
     "react-router-dom": "^6.26.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "sass": "^1.77.8",
     "web-vitals": "^2.1.4"
